<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
   >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >

        <Button
            android:id="@+id/btn_1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/btn_1"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@drawable/buttonstyle"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/btn_3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/btn_3" />

        <Button
            android:id="@+id/btn_4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/btn_4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/btn_5" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/btn_6" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/btn_7"
            android:background="@drawable/buttonstyle"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_8"
            android:background="@drawable/buttonstyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btn_9"
            android:background="@drawable/buttonstyle"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_10"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/btn_10"
            android:background="@drawable/buttonstyle"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btn_11"
            android:background="@drawable/buttonstyle"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/btn_12"
            android:background="@drawable/buttonstyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/btn_13"
            android:background="@drawable/buttonstyle"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/btn_14"
            android:background="@drawable/buttonstyle"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:text="@string/btn_15"
            android:background="@drawable/buttonstyle"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:text="@string/btn_16"
            android:background="@drawable/buttonstyle"/>

    </LinearLayout>

</LinearLayout>
