<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    tools:layout_editor_absoluteY="89dp">

    <TextView
        android:id="@+id/t1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="279dp"
        android:background="@color/color1"
        android:gravity="center"
        android:text="@string/t1"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/t7"
        app:layout_constraintEnd_toStartOf="@+id/t2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="91dp"
        android:background="@color/color2"
        android:gravity="center"
        android:text="@string/t2"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/t5"
        app:layout_constraintEnd_toStartOf="@+id/t3"
        app:layout_constraintStart_toEndOf="@+id/t1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="0dp"
        android:layout_height="97dp"
        android:layout_marginBottom="145dp"
        android:background="@color/color3"
        android:gravity="center"
        android:text="@string/t3"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/t6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/t2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="182dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="90dp"
        android:background="@color/color4"
        android:gravity="center"
        android:text="@string/t4"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/t7"
        app:layout_constraintEnd_toStartOf="@+id/t5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="176dp"
        android:background="@color/color5"
        android:gravity="center"
        android:text="@string/t5"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/t6"
        app:layout_constraintStart_toEndOf="@+id/t4"
        app:layout_constraintTop_toBottomOf="@+id/t2" />

    <TextView
        android:id="@+id/t6"
        android:layout_width="0dp"
        android:layout_height="103dp"
        android:layout_marginEnd="235dp"
        android:background="@color/color6"
        android:gravity="center"
        android:text="@string/t6"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBaseline_toBaselineOf="@+id/t5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/t5" />

    <TextView
        android:id="@+id/t7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:background="@color/color7"
        android:gravity="center"
        android:text="@string/t7"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t4" />


</android.support.constraint.ConstraintLayout>